--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-ANTHROPIC_API_KEY=
-ALLOWED_CUSTOMERS=
+# API Keys
+ANTHROPIC_API_KEY=your_api_key_here
+
+# Email Configuration
+ALLOWED_CUSTOMERS=customer1@example.com,customer2@example.com,test@example.com
+
+# Optional Configuration
+COMPANY_NAME="Your Company Name"
+CHECK_INTERVAL=10  # seconds
