--- a/.pylintrc
+++ b/.pylintrc
@@ -2,7 +2,8 @@
 disable=missing-class-docstring,
         missing-module-docstring,  
         missing-function-docstring,  
-        too-few-public-methods  
+        too-few-public-methods,
+        broad-exception-caught
 
 [FORMAT]
 max-line-length=120
